[package]
name = "cli-tables"
version = "0.1.0"
edition = "2021"
description = "A simple Rust library for generating ASCII tables in a CLI application."
readme = "README.md"
repository = "https://github.com/ethanhelwig/cli-tables.git"
license = "MIT"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal_size = "0.2.6"